Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-317

Impalad crashes while constructing the RuntimeProfile.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 1.0
    • Impala 1.0
    • None
    • None

    Description

      This happened during a nightly master build. It is has not been seen in the 3-4 builds since.

      Stack:

      (gdb) bt
      #0  0x0000003d54a32885 in raise () from /lib64/libc.so.6
      #1  0x0000003d54a34065 in abort () from /lib64/libc.so.6
      #2  0x00007fcfa847f727 in os::abort(bool) () from /usr/java/jdk1.6.0_31/jre/lib/amd64/server/libjvm.so
      #3  0x00007fcfa85d2cc8 in VMError::report_and_die() () from /usr/java/jdk1.6.0_31/jre/lib/amd64/server/libjvm.so
      #4  0x00007fcfa84860e5 in JVM_handle_linux_signal () from /usr/java/jdk1.6.0_31/jre/lib/amd64/server/libjvm.so
      #5  0x00007fcfa84823ee in signalHandler(int, siginfo*, void*) () from /usr/java/jdk1.6.0_31/jre/lib/amd64/server/libjvm.so
      #6  <signal handler called>
      #7  0x0000000000cebf8d in impala::InstanceComparator::operator() (this=0x7fcf78814b00, a=..., b=...) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/runtime/coordinator.cc:1063
      #8  0x0000000000d08899 in std::__unguarded_linear_insert<__gnu_cxx::__normal_iterator<std::pair<impala::RuntimeProfile*, bool>*, std::vector<std::pair<impala::RuntimeProfile*, bool>, std::allocator<std::pair<impala::RuntimeProfile*, bool> > > >, std::pair<impala::RuntimeProfile*, bool>, impala::InstanceComparator> (__last=..., __val=..., __comp=...) at /usr/lib/gcc/x86_64-redhat-linux/4.4.6/../../../../include/c++/4.4.6/bits/stl_algo.h:2084
      #9  0x0000000000d0418f in std::__insertion_sort<__gnu_cxx::__normal_iterator<std::pair<impala::RuntimeProfile*, bool>*, std::vector<std::pair<impala::RuntimeProfile*, bool>, std::allocator<std::pair<impala::RuntimeProfile*, bool> > > >, impala::InstanceComparator> (__first=..., __last=..., __comp=...) at /usr/lib/gcc/x86_64-redhat-linux/4.4.6/../../../../include/c++/4.4.6/bits/stl_algo.h:2134
      #10 0x0000000000cfdfb1 in std::__final_insertion_sort<__gnu_cxx::__normal_iterator<std::pair<impala::RuntimeProfile*, bool>*, std::vector<std::pair<impala::RuntimeProfile*, bool>, std::allocator<std::pair<impala::RuntimeProfile*, bool> > > >, impala::InstanceComparator> (__first=..., __last=..., __comp=...) at /usr/lib/gcc/x86_64-redhat-linux/4.4.6/../../../../include/c++/4.4.6/bits/stl_algo.h:2198
      #11 0x0000000000cf8185 in std::sort<__gnu_cxx::__normal_iterator<std::pair<impala::RuntimeProfile*, bool>*, std::vector<std::pair<impala::RuntimeProfile*, bool>, std::allocator<std::pair<impala::RuntimeProfile*, bool> > > >, impala::InstanceComparator> (__first=..., __last=..., __comp=...) at /usr/lib/gcc/x86_64-redhat-linux/4.4.6/../../../../include/c++/4.4.6/bits/stl_algo.h:5260
      #12 0x0000000000cf3fbd in impala::RuntimeProfile::SortChildren<impala::InstanceComparator> (this=0x6274d80, cmp=...) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/util/runtime-profile.h:217
      #13 0x0000000000cec3e9 in impala::Coordinator::ReportQuerySummary (this=0x69ed800) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/runtime/coordinator.cc:1104
      #14 0x0000000000ce9c8f in impala::Coordinator::CancelInternal (this=0x69ed800) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/runtime/coordinator.cc:857
      #15 0x0000000000ce545b in impala::Coordinator::UpdateStatus (this=0x69ed800, status=..., instance_id=0x67c7400) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/runtime/coordinator.cc:460
      #16 0x0000000000ceb5d2 in impala::Coordinator::UpdateFragmentExecStatus (this=0x69ed800, params=...) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/runtime/coordinator.cc:1005
      #17 0x0000000000b4f25c in impala::ImpalaServer::ReportExecStatus (this=0x64e9c00, return_val=..., params=...) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/service/impala-server.cc:1659
      #18 0x0000000000daf9ff in impala::ImpalaInternalServiceProcessor::process_ReportExecStatus (this=0x507ee40, seqid=0, iprot=0x5d7c840, oprot=0x5d7c500, callContext=0x76e25b8)
          at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/generated-sources/gen-cpp/ImpalaInternalService.cpp:1003
      #19 0x0000000000daef78 in impala::ImpalaInternalServiceProcessor::dispatchCall (this=0x507ee40, iprot=0x5d7c840, oprot=0x5d7c500, fname="ReportExecStatus", seqid=0, callContext=0x76e25b8)
          at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/generated-sources/gen-cpp/ImpalaInternalService.cpp:922
      #20 0x0000000000b570fa in apache::thrift::TDispatchProcessor::process (this=0x507ee40, in=..., out=..., connectionContext=0x76e25b8)
          at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/thirdparty/thrift-0.9.0/build/include/thrift/TDispatchProcessor.h:121
      #21 0x0000000001849f09 in apache::thrift::server::TThreadedServer::Task::run (this=0x47552c0) at src/thrift/server/TThreadedServer.cpp:70
      #22 0x000000000184c8b2 in apache::thrift::concurrency::PthreadThread::threadMain (arg=0x5231980) at src/thrift/concurrency/PosixThreadFactory.cpp:208
      #23 0x0000003d552077f1 in start_thread () from /lib64/libpthread.so.0
      #24 0x0000003d54ae5ccd in clone () from /lib64/libc.so.6
      (gdb) f 12
      #12 0x0000000000cf3fbd in impala::RuntimeProfile::SortChildren<impala::InstanceComparator> (this=0x6274d80, cmp=...) at /data/1/jenkins/workspace/impala-master-64bit/repos/Impala/be/src/util/runtime-profile.h:217
      217	    std::sort(children_.begin(), children_.end(), cmp);
      (gdb) 
      
      

      The core is available for debugging.

      Attachments

        Activity

          People

            skye Skye Wanderman-Milne
            ishaan Ishaan Joshi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: