IMPALA-317: Impalad crashes while constructing the RuntimeProfile.